--- a/iRT.html
+++ b/iRT.html
@@ -1001,7 +1001,7 @@
                 <option value="4">Difícil</option>
                 <option value="3">Nem fácil nem difícil</option>
                 <option value="2">Fácil</option>
-                <option value="1">Muito Fácil</option>
+                <option value="1">Muito fácil</option>
               </select>
             </td>
           </tr>
@@ -1015,7 +1015,7 @@
                 <option value="4">Difícil</option>
                 <option value="3">Nem fácil nem difícil</option>
                 <option value="2">Fácil</option>
-                <option value="1">Muito Fácil</option>
+                <option value="1">Muito fácil</option>
               </select>
             </td>
           </tr>
@@ -1029,7 +1029,7 @@
                 <option value="4">Difícil</option>
                 <option value="3">Nem fácil nem difícil</option>
                 <option value="2">Fácil</option>
-                <option value="1">Muito Fácil</option>
+                <option value="1">Muito fácil</option>
               </select>
             </td>
           </tr>
@@ -1043,67 +1043,75 @@
                 <option value="4">Difícil</option>
                 <option value="3">Nem fácil nem difícil</option>
                 <option value="2">Fácil</option>
-                <option value="1">Muito Fácil</option>
+                <option value="1">Muito fácil</option>
               </select>
             </td>
           </tr>
-          <tr>
-            <td colspan="2" style="padding:10px">
-              <p>
-                Você percebeu alguma semelhança entre os objetos de rotação interativa? 
-                <input type="radio" name="p_likeness" id="p_likeness_sim" value="Sim" 
-                onchange="unhideById('input-likeness-txt')">
-                <label for="p_likeness_sim">Sim</label> |
-                <input type="radio" name="p_likeness" id="p_likeness_nao" value="Não"
-                onchange="unhideById('button-dificulty')">
-                <label for="p_likeness_nao">Não</label>
-              </p>
-            </td>
-          </tr>
-          <tr>
-            <td colspan="2" style="padding:10px">
-              <div id="input-likeness-txt" style="visibility:hidden" >
-                <label for="p_likeness_txt">Descreva sucintamente, por favor:</label>
-                <br>
-                <textarea id="p_likeness_txt" name="p_likeness_txt" rows="5" cols="50"
-                oninput="unhideById('button-dificulty')"></textarea>
-              </div>
-            </td>
-          </tr>
         </table>
-        <button id="button-dificulty" style="visibility:hidden"
-        onclick="unremoveById('div-usability'); removeById('div-dificulty')" >Finalizar</button>
+        <p>
+          Você percebeu alguma semelhança entre os objetos de rotação interativa? 
+          <input type="radio" name="p_likeness" id="p_likeness_sim" value="Sim" 
+          onchange="unhideById('input-likeness-txt')">
+          <label for="p_likeness_sim">Sim</label> |
+          <input type="radio" name="p_likeness" id="p_likeness_nao" value="Não"
+          onchange="unhideById('button-dificulty');hideById('input-likeness-txt')">
+          <label for="p_likeness_nao">Não</label>
+        </p>
+        <div id="input-likeness-txt" style="visibility:hidden" >
+          <label for="p_likeness_txt">Descreva sucintamente, por favor:</label>
+          <br>
+          <textarea id="p_likeness_txt" name="p_likeness_txt" rows="5" cols="50"
+          oninput="unhideById('button-dificulty')"></textarea>
+        </div>
+        <button type="button" id="button-dificulty" style="visibility:hidden"
+        onclick="unremoveById('div-usability','block'); removeById('div-dificulty')" >
+          Próximo
+        </button>
       </div>
-      <div id="div-usability" class="grid-center" style="display:none">
+      <div id="div-usability" style="display:none;margin:auto">
         <br>Gostou de participar? 
-        <br>
-        <select name="p_usability_a">
+        <select name="p_enjoy">
           <option value="">-- ESCOLHA --</option>
-          <option value="5">Detestei</option>
-          <option value="4">Não gostei</option>
+          <option value="1">Detestei</option>
+          <option value="2">Não gostei</option>
           <option value="3">Indiferente</option>
-          <option value="2">Gostei</option>
-          <option value="1">Adorei</option>
+          <option value="4">Gostei</option>
+          <option value="5">Adorei</option>
         </select>
         <br>Na sua opinião, interface estava clara e fácil de usar? 
-        <br>
-        <select name="p_usability_b">
+        <select name="p_usability">
           <option value="">-- ESCOLHA --</option>
-          <option value="5">Muito difícil</option>
-          <option value="4">Difícil</option>
+          <option value="5">Muito fácil</option>
+          <option value="4">Fácil</option>
           <option value="3">Nem fácil nem difícil</option>
-          <option value="2">Fácil</option>
-          <option value="1">Muito Fácil</option>
+          <option value="2">Difícil</option>
+          <option value="1">Muito difícil</option>
         </select>
-        
-        Participar desta pesquisa foi cansativo? Se sim, em quais momentos?
-        Comentários livres:
-        (make button visible when interacting WIP)
-        <button id="button-usability" style="visibility:hidden"
-        onclick="nextStage();closeFullscreen();saveProfilingData()" >Finalizar</button>
+        <p>
+          Você considerou cansativa a participação nesta pesquisa?
+          <input type="radio" name="p_tiring" id="p_tiring_sim" value="Sim"
+          onchange="unhideById('div-tiring-txt')">
+          <label for="p_tiring_sim">Sim</label> |
+          <input type="radio" name="p_tiring" id="p_tiring_nao" value="Não"
+          onchange="hideById('div-tiring-txt')">
+          <label for="p_tiring_nao">Não</label>
+
+          <div id="div-tiring-txt" style="visibility:hidden">
+            <label for="p_tiring_txt"> Por favor, descreva o que causou cansaço, 
+            <br> para que possamos melhorar a qualidade do teste</label>
+            <br>
+            <textarea id="p_tiring_txt" name="p_tiring_txt" rows="2" cols="50"></textarea>
+          </div>
+          Sinta-se à vontade para deixar quaisquer comentários adicionais que desejar:
+          <br>
+          <textarea id="p_feedback_txt" name="p_feedback_txt" rows="5" cols="50"></textarea>
+          <br><br>
+          <button id="button-usability"
+          onclick="nextStage();closeFullscreen();saveProfilingData()" >Finalizar</button>
+        </p>
       </div>
   
-      </form>
+    </form>
   </section>
 
   <!-- End of trials: agradecimentos-->
