Change questions regarding following instructions

--- a/iRT.html
+++ b/iRT.html
@@ -625,7 +625,7 @@
             <td><input type="radio" name="p_dif_c08" value="5"></td>
             <td><input type="radio" name="p_dif_c08" value="0"></td>
           </tr>
-          <tr><td>Montar e utilizar eletrodomésticos seguindo instruções em vídeo</td>
+          <tr><td>Seguir instruções em vídeo</td>
             <td><input type="radio" name="p_dif_c09" value="1"></td>
             <td><input type="radio" name="p_dif_c09" value="2"></td>
             <td><input type="radio" name="p_dif_c09" value="3"></td>
@@ -649,7 +649,7 @@
             <td><input type="radio" name="p_dif_c11" value="5"></td>
             <td><input type="radio" name="p_dif_c11" value="0"></td>
           </tr>
-          <tr><td>Montar e utilizar eletrodomésticos seguindo manual de instruções impresso</td>
+          <tr><td>Seguir manual de instruções impresso</td>
             <td><input type="radio" name="p_dif_c12" value="1"></td>
             <td><input type="radio" name="p_dif_c12" value="2"></td>
             <td><input type="radio" name="p_dif_c12" value="3"></td>
