Bugfix and clarity
Fix typo in file name (remove , in ",estudo02...")
Fix missing reference quaternion coordinates in local backup .csv files.
Add or modify comments for clarity

--- a/iRT.html
+++ b/iRT.html
@@ -1112,6 +1112,7 @@
   <br>
   <div id="last-updated" class="unhider fixed-footer" style=" font-size:x-small; " >
     <script>
+      //script to add the date the file was last modified/updated
       document.write(`Last updated: `+ document.lastModified);
     </script>
     <span class="hidden-elem" >
