Add iRT data to JSON object
Add function to push iRT data to json object: recordTrialIRT(...). 15 arguments total, must clean this in the future.
Change the stringify part of the function to only work on array of primitives (numbers and strings). All other values will keep showing in new lines.

--- a/iRT.html
+++ b/iRT.html
@@ -899,8 +899,10 @@
           <th colspan="3" style="text-align:center; height:2rem">
             <button id="button-irt-start" onclick="iRTStart();removeById('iRT-instructions')">
               Começar!</button>
-              <button id="button-irt-submit" onclick="buttoniRTSubmit()" form="gsForm"
-              style="display:none">
+              <button id="button-irt-submit" form="gsForm" style="display:none"
+              onclick="buttoniRTSubmit(); recordTrialIRT(modelName, razaoPxAngst, time_initial, 
+              scrSizeX, scrSizeY, gsForm, arrayEpoch,refQuat,parametroD,parametro1,parametro2,
+              parametro3,parametro4,arrayMouseX, arrayMouseY)">
               Pronto!</button>
           </th>
         </tr>
