Update chem.structure comments for clarity

--- a/iRT.html
+++ b/iRT.html
@@ -735,13 +735,13 @@
     </form>
   </section>
   
-  <!-- chem.vis. test -->
+  <!-- chemical structures test -->
   <section id="tab_chem" class="ContentStage" style="display:none; font-size:large">
       <!-- jmol script for images: 
       frank off; select all; wireframe 0.10; spacefill 20%; select hydrogens; spacefill 15% -->
     <form id="form-chem-test" autocomplete="off" >
       
-      <!--images table-->
+      <!--chem. images table-->
       <table style="margin:auto;text-align:center;"> 
         <tr>
           <td colspan="4" style="line-height:0">
@@ -783,6 +783,7 @@
             <br>É diferente!
           </label>
         </div>
+        <!-- function call for test next value -->
         <button type="button" id="button-chem-next" style="visibility:hidden" 
         onclick="chemStructureNext(chemStructureArray);this.style.visibility='hidden'">Próximo</button>
       </div>
