--- a/iRT.html
+++ b/iRT.html
@@ -109,8 +109,7 @@
       <!-- Forms: info para retorno -->
       <div id="div-form-1">
         <p>
-          Se deseja receber uma cópia dos seus dados e participar de <br>
-          pesquisas como esta no futuro, deixe seu nome e email.
+          Se deseja receber uma cópia dos seus dados, deixe seu nome e email.
         </p>
         <p> Nome (opcional): 
           <input type="text" name="fname" placeholder="Ex: Rodrigo Alves" size="30" autofocus></p>
@@ -1046,6 +1045,7 @@
           Próximo
         </button>
       </div>
+
       <div id="div-usability" style="display:none;margin:auto">
         
         <br>
@@ -1061,40 +1061,44 @@
         <br>
 
         <br>
-        Na sua opinião, interface estava clara e fácil de usar? 
+        Na sua opinião, a interface estava clara e fácil de usar? 
         <input type="radio" name="p_usability" id="p_usability_sim" value="Sim"
-          onchange="unhideById('div-usability-txt')">
+          onchange="hideById('div-usability-txt')">
         <label for="p_usability_good">Sim</label> |
         <input type="radio" name="p_usability" id="p_usability_nao" value="Não"
-          onchange="hideById('div-usability-txt')">
+          onchange="unhideById('div-usability-txt')">
         <label for="p_usability_nao">Não</label>
 
         <div id="div-usability-txt" style="visibility:hidden">
-          <label for="p_usability_txt"> Por favor, descreva o que causou cansaço, 
-          <br> para que possamos melhorar a qualidade do teste</label>
+          <label for="p_usability_txt"> Por favor, descreva brevemente quais 
+            partes da interface estavam confusas ou difíceis de usar.</label>
           <br>
-          <textarea id="p_usability_txt" name="p_usability_txt" rows="2" cols="50"></textarea>
+          <textarea id="p_usability_txt" name="p_usability_txt" rows="2" cols="70"></textarea>
         </div>
 
         Você considerou cansativa a participação nesta pesquisa?
           <input type="radio" name="p_tiring" id="p_tiring_sim" value="Sim"
-          onchange="hideById('div-tiring-txt')">
+          onchange="unhideById('div-tiring-txt')">
           <label for="p_tiring_sim">Sim</label> |
           <input type="radio" name="p_tiring" id="p_tiring_nao" value="Não"
-          onchange="unhideById('div-tiring-txt')">
+          onchange="hideById('div-tiring-txt')">
           <label for="p_tiring_nao">Não</label>
 
           <div id="div-tiring-txt" style="visibility:hidden">
             <label for="p_tiring_txt"> Por favor, descreva o que causou cansaço, 
-            <br> para que possamos melhorar a qualidade do teste</label>
+             para que possamos melhorar a qualidade do teste</label>
             <br>
-            <textarea id="p_tiring_txt" name="p_tiring_txt" rows="2" cols="50"></textarea>
+            <textarea id="p_tiring_txt" name="p_tiring_txt" rows="2" cols="70"></textarea>
           </div>
-
+          Deseja participar de mais pesquisas como esta no futuro?
+          <input type="radio" name="p_remake" id="p_remake_sim" value="Sim">
+          <label for="p_remake_sim">Sim</label> |
+          <input type="radio" name="p_remake" id="p_remake_nao" value="Não">
+          <label for="p_remake_nao">Não</label>
           <br>
           Sinta-se à vontade para deixar quaisquer comentários adicionais que desejar:
           <br>
-          <textarea id="p_feedback_txt" name="p_feedback_txt" rows="5" cols="50"></textarea>
+          <textarea id="p_feedback_txt" name="p_feedback_txt" rows="4" cols="70"></textarea>
           <br><br>
           <button id="button-usability" type="button"
           onclick="nextStage();closeFullscreen();saveProfilingData()" >Finalizar</button>
