Change texts for clarity

--- a/iRT.html
+++ b/iRT.html
@@ -851,6 +851,9 @@
 
     <!-- pre-task -->
     <div id="div-psvtr-start" class="grid-center-whole" style="display:none">
+      <p>Após calibrar o eye-tracker, pressione
+      <br> "Começar" para iniciar o teste
+      <br><br>
       <button onclick="removeById('div-psvtr-start');unremoveById('div-psvtr-task','grid');tic();">
         Começar!
       </button>
@@ -892,7 +895,7 @@
 
     </div>
     <div id='div-corsi-end' class="grid-center" style="display:none">
-      <p>Aperte 'Próximo' para prosseguir
+      <p>Aperte para prosseguir
       </p>
       <button id="endOfCorsiButton"  onclick='nextStage();'>
         Próxima etapa >>
