--- a/iRT.html
+++ b/iRT.html
@@ -188,11 +188,19 @@
             <td>
               <select name="p_educ_grau" id="p_educ_grau">
                 <option value="">-- ESCOLHA --</option>
+                <option value="Ensino Médio (incompleto)">Ensino Médio (incompleto)</option>
                 <option value="Ensino Médio">Ensino Médio</option>
+                <option value="Ensino Técnico (incompleto)">Ensino Técnico (incompleto)</option>
                 <option value="Ensino Técnico">Ensino Técnico</option>
+                <option value="Graduação (incompleta)">Graduação (incompleta)</option>
                 <option value="Graduação">Graduação</option>
+                <option value="Especialização (incompleta)">Especialização (incompleta)</option>
+                <option value="Especialização">Especialização</option>
+                <option value="Mestrado (incompleto)">Mestrado (incompleto)</option>
                 <option value="Mestrado">Mestrado</option>
+                <option value="Doutorado (incompleto)">Doutorado (incompleto)</option>
                 <option value="Doutorado">Doutorado</option>
+                <option value="Pós-Doutorado (incompleto)">Pós-Doutorado (incompleto)</option>
                 <option value="Pós-Doutorado">Pós-Doutorado</option>
               </select>
             </td>
@@ -207,7 +215,7 @@
             <td><input type="number" name="p_educ_year" id="p_educ_year" min="1900"></td>
           </tr>
           <tr>
-            <td><label for="p_educ_duration">Duração do curso (anos):</label></td>
+            <td><label for="p_educ_duration">Duração do curso em anos (se incompleto, duração prevista) :</label></td>
             <td><input type="number" name="p_educ_duration" id="p_educ_duration"></td>
           </tr>
           <tr>
