Update p_likeness text

--- a/iRT.html
+++ b/iRT.html
@@ -988,8 +988,8 @@
   <section id="tab_final_question" class="ContentStage" style="display:none"> 
     <form id="endForm" class="form" autocomplete="off">
       <h1>Últimas perguntas:</h1>
+      <!-- preceived dificulty -->
       <div id="div-dificulty" class="grid-center">
-        <!-- table of preceived dificulty -->
         <table style="margin:auto">
           <tr>
             <td colspan="2" style="padding:10px">
@@ -1054,7 +1054,7 @@
           </tr>
         </table>
         <p>
-          Você percebeu alguma semelhança entre os objetos de rotação interativa? 
+          Você percebeu alguma semelhança entre os objetos diferentes de rotação interativa? 
           <input type="radio" name="p_likeness" id="p_likeness_sim" value="Sim" 
           onchange="unhideById('input-likeness-txt')">
           <label for="p_likeness_sim">Sim</label> |
