Add question about repeated test

--- a/iRT.html
+++ b/iRT.html
@@ -1086,9 +1086,15 @@
           <option value="4">Gostei</option>
           <option value="5">Adorei</option>
         </select>
-        <br>
+        <br><br>
 
-        <br>
+        Já participou de pesquisas semelhantes a esta?
+        <input type="radio" name="p_research" id="p_research_sim" value="Sim">
+        <label for="p_research_sim">Sim</label> |
+        <input type="radio" name="p_research" id="p_research_nao" value="Não">
+        <label for="p_research_nao">Não</label>
+        <br><br>
+
         Na sua opinião, a interface estava clara e fácil de usar? 
         <input type="radio" name="p_usability" id="p_usability_sim" value="Sim"
           onchange="hideById('div-usability-txt')">
