Fix incorrect Id name
Change input-likeness-txt to input-repeat-txt

--- a/iRT.html
+++ b/iRT.html
@@ -1063,7 +1063,7 @@
           onchange="unhideById('input-repeat-txt')">
           <label for="p_repeat_sim">Sim</label> |
           <input type="radio" name="p_repeat" id="p_repeat_nao" value="Não"
-          onchange="hideById('input-likeness-txt')">
+          onchange="hideById('input-repeat-txt')">
           <label for="p_repeat_nao">Não</label>
           <div id="input-repeat-txt" style="visibility:hidden" >
             <label for="p_repeat_txt"> Quais?</label>
