Update p_educ_field label
Add more examples (analítica, orgânica)

--- a/iRT.html
+++ b/iRT.html
@@ -207,7 +207,7 @@
           </tr>
           <tr>
             <td><label for="p_educ_field">Qual área do curso:<br>
-              Ex: Química, Bacharel/Licenciatura/Tecnólogo</label></td>
+              Ex: Química orgânica/analítica/licenciatura/bacharel/etc.</label></td>
             <td><input type="text" name="p_educ_field" id="p_educ_field" size="40"></td>
           </tr>
           <tr>
