--- a/iRT.html
+++ b/iRT.html
@@ -207,15 +207,15 @@
           </tr>
           <tr>
             <td><label for="p_educ_field">Qual área do curso:<br>
-              Ex: Química orgânica/analítica/licenciatura/bacharel/etc.</label></td>
+              Ex: Bioquímica/Química orgânica/analítica/etc.</label></td>
             <td><input type="text" name="p_educ_field" id="p_educ_field" size="40"></td>
           </tr>
           <tr>
-            <td><label for="p_educ_year">Ano de início:</label></td>
+            <td><label for="p_educ_year">Ano de início da formação mais recente:</label></td>
             <td><input type="number" name="p_educ_year" id="p_educ_year" min="1900"></td>
           </tr>
           <tr>
-            <td><label for="p_educ_duration">Duração do curso em anos (se incompleto, duração prevista) :</label></td>
+            <td><label for="p_educ_duration">Duração em anos (se incompleto, duração prevista) :</label></td>
             <td><input type="number" name="p_educ_duration" id="p_educ_duration"></td>
           </tr>
           <tr>
