Update in final questions
Update to get closer to spoken explanation with better clarity.
Many subjects were confused with previous question writing.

--- a/iRT.html
+++ b/iRT.html
@@ -1078,7 +1078,8 @@
         <br><br>
         
         <p>
-          Você percebeu alguma semelhança entre os objetos diferentes de rotação interativa? 
+          Durante o teste de rotação interativa, você percebeu alguma semelhança
+           entre os pares de objetos? 
           <input type="radio" name="p_likeness" id="p_likeness_sim" value="Sim" 
           onchange="unhideById('input-likeness-txt')">
           <label for="p_likeness_sim">Sim</label> |
