Fix chem structure time data
Change tic/toc() calls on chem structure test. Now 1st value of time correctly counts the duration of 1st trial instead of duration since page is opened.
Will have to check exact duration in each eye tracker recording

--- a/iRT.html
+++ b/iRT.html
@@ -767,11 +767,12 @@
       <br><br> Ao concluir cada tarefa, clique no botão “Próximo”.
       </p>
       <button type="button" onclick="unremoveById('div-chem-task','grid');
-      removeById('div-chem-intro')">Começar</button>
+      removeById('div-chem-intro');tic('tic-chem-struct')">Começar</button>
     </div>
     
     <div id="div-chem-task" class="grid-center-whole" style="display:none">
       <form id="form-chem-test" autocomplete="off" >
+        
         <!--chem. images table-->
         <table style="margin:auto;text-align:center;"> 
           <tr>
