--- a/iRT.html
+++ b/iRT.html
@@ -763,7 +763,7 @@
       <br><br>Compare se a molécula representada pela estrutura da direita é a 
       <br>mesma ou diferente da representada pela estrutura da esquerda.
       <br><br> Escolha a opção abaixo que mais condiz com o que você acha e seu
-      <br>de certeza da resposta. 
+      <br>grau de certeza da resposta. 
       <br><br> Ao concluir cada tarefa, clique no botão “Próximo”.
       </p>
       <button type="button" onclick="unremoveById('div-chem-task','grid');
