Update text of "formação" for better clarity

--- a/iRT.html
+++ b/iRT.html
@@ -206,12 +206,12 @@
             </td>
           </tr>
           <tr>
-            <td><label for="p_educ_field">Qual área do curso:<br>
+            <td><label for="p_educ_field">Qual área:<br>
               Ex: Bioquímica/Química orgânica/analítica/etc.</label></td>
             <td><input type="text" name="p_educ_field" id="p_educ_field" size="40"></td>
           </tr>
           <tr>
-            <td><label for="p_educ_year">Ano de início da formação mais recente:</label></td>
+            <td><label for="p_educ_year">Ano de início:</label></td>
             <td><input type="number" name="p_educ_year" id="p_educ_year" min="1900"></td>
           </tr>
           <tr>
@@ -232,7 +232,7 @@
           <tr id="input-educ-txt" style="visibility:hidden">
             <td>
               <label for="p_educ_prev_txt">Descreva sucintamente, por favor:<br>
-               Nível / Área / Ano de início / Duração(anos)
+               Nível / Área / Duração (anos)
               </label>
             </td>
             <td><textarea id="p_educ_prev_txt" name="p_educ_prev_txt" rows="5" cols="60"></textarea></td>
